--- a/trunk/intellidocs-ear/pom.xml
+++ b/trunk/intellidocs-ear/pom.xml
@@ -20,6 +20,66 @@
     <dependencies>
 
         <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.7.0</version>
+            <type>jar</type>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>commons-digester</groupId>
+            <artifactId>commons-digester</artifactId>
+            <version>1.8</version>
+            <type>jar</type>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.seam</groupId>
+            <artifactId>jboss-seam</artifactId>
+            <version>2.0.0.GA</version>
+            <type>ejb</type>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>dom4j</artifactId>
+                    <groupId>dom4j</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>el-api</artifactId>
+                    <groupId>javax.el</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>javassist</artifactId>
+                    <groupId>jboss</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.el</groupId>
+                    <artifactId>el-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.servlet</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>javax.servlet.jsp</groupId>
+                    <artifactId>jsp-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>com.ibt.intellidocs</groupId>
             <artifactId>intellidocs-ejb</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -47,21 +107,72 @@
                     <version>1.4</version>
                     <defaultLibBundleDir>lib</defaultLibBundleDir>
                     <modules>
-
                         <webModule>
                             <groupId>com.ibt.intellidocs</groupId>
                             <artifactId>intellidocs-war</artifactId>
                             <contextRoot>/intellidocs</contextRoot>
                         </webModule>
+                        <ejbModule>
+                            <groupId>org.jboss.seam</groupId>
+                            <artifactId>jboss-seam</artifactId>
+                        </ejbModule>
+                        <jarModule>
+                            <artifactId>commons-beanutils</artifactId>
+                            <groupId>commons-beanutils</groupId>
+                            <bundleDir>lib</bundleDir>
+                        </jarModule>
+                        <jarModule>
+                            <artifactId>commons-digester</artifactId>
+                            <groupId>commons-digester</groupId>
+                            <bundleDir>lib</bundleDir>
+                        </jarModule>
                     </modules>
-                    <jboss>
-                        <version>4.2</version>
-                        <loader-repository>
-                            com.ibt.intellidocs:loader=intellidocs
-                        </loader-repository>
-                    </jboss>
+                    <!--
+                                        <jboss>
+                                            <version>4.2</version>
+                                            <loader-repository>
+                                                intellidocs-ear-1.0-SNAPSHOT:loader=intellidocs-ear-1.0-SNAPSHOT.ear
+                                            </loader-repository>
+                                        </jboss>
+                    -->
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.cargo</groupId>
+                <artifactId>cargo-maven2-plugin</artifactId>
+                <configuration>
+                    <!-- Container configuration -->
+                    <container>
+                        <containerId>jboss4x</containerId>
+                        <home>/opt/share/jboss-4.2.2.GA</home>
+                    </container>
+                    <!-- Configuration to use with the container -->
+                    <configuration>
+                        <type>existing</type>
+                        <home>/opt/share/jboss-4.2.2.GA/server/default</home>
+                        <properties>
+                            <cargo.jboss.configuration>default
+                            </cargo.jboss.configuration>
+                        </properties>
+                    </configuration>
+                    <!-- Deployer configuration -->
+                    <deployer>
+                        <type>installed</type>
+                        <deployables>
+                            <deployable>
+                                <groupId>com.ibt.intellidocs</groupId>
+                                <artifactId>intellidocs-ear</artifactId>
+                                <type>ear</type>
+                                <pingURL>
+                                    http://localhost:8080/intellidocs/home.xhtml
+                                </pingURL>
+                            </deployable>
+                        </deployables>
+                    </deployer>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
