--- a/trunk/intellidocs-war/pom.xml
+++ b/trunk/intellidocs-war/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>jboss-seam</artifactId>
-            <version>2.0.0.GA</version>
+            <version>2.0.1.CR1</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>jboss-seam-debug</artifactId>
-            <version>2.0.0.GA</version>
+            <version>2.0.1.CR1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>commons-beanutils</artifactId>
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>jboss-seam-ui</artifactId>
-            <version>2.0.0.GA</version>
+            <version>2.0.1.CR1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>commons-beanutils</artifactId>
@@ -163,7 +163,7 @@
         <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>jboss-seam-pdf</artifactId>
-            <version>2.0.0.GA</version>
+            <version>2.0.1.CR1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>commons-beanutils</artifactId>
@@ -207,7 +207,7 @@
         <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>jboss-seam-remoting</artifactId>
-            <version>2.0.0.GA</version>
+            <version>2.0.1.CR1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>commons-beanutils</artifactId>
@@ -251,7 +251,7 @@
         <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>jboss-seam-ioc</artifactId>
-            <version>2.0.0.GA</version>
+            <version>2.0.1.CR1</version>
             <exclusions>
                 <exclusion>
                     <artifactId>commons-beanutils</artifactId>
@@ -371,10 +371,6 @@
                     <groupId>javax.faces</groupId>
                     <artifactId>jsf-impl</artifactId>
                 </exclusion>
-                <!-- <exclusion>
-                   <groupId>javax.servlet</groupId>
-                   <artifactId>jstl</artifactId>
-                </exclusion>-->
             </exclusions>
         </dependency>
 
