--- a/trunk/intellidocs-ear/pom.xml
+++ b/trunk/intellidocs-ear/pom.xml
@@ -18,31 +18,20 @@
     <url>http://localhost:8080/intellidocs</url>
 
     <dependencies>
-
-        <!--
-                <dependency>
-                    <groupId>org.jboss.seam</groupId>
-                    <artifactId>jboss-el</artifactId>
-                    <version>2.0.0.GA</version>
-                    <type>jar</type>
-                </dependency>
-        -->
         <dependency>
-            <groupId>commons-digester</groupId>
-            <artifactId>commons-digester</artifactId>
-            <version>1.8</version>
-            <type>jar</type>
-            <exclusions>
-                <exclusion>
-                    <artifactId>commons-logging</artifactId>
-                    <groupId>commons-logging</groupId>
-                </exclusion>
-            </exclusions>
+            <groupId>com.ibt.intellidocs</groupId>
+            <artifactId>intellidocs-ejb</artifactId>
+            <type>ejb</type>
+        </dependency>
+        <dependency>
+            <groupId>com.ibt.intellidocs</groupId>
+            <artifactId>intellidocs-war</artifactId>
+            <type>war</type>
         </dependency>
         <dependency>
             <groupId>org.jboss.seam</groupId>
             <artifactId>jboss-seam</artifactId>
-            <version>2.0.1.CR1</version>
+            <version>${seamVersion}</version>
             <type>ejb</type>
             <exclusions>
                 <exclusion>
@@ -54,40 +43,15 @@
                     <groupId>dom4j</groupId>
                 </exclusion>
                 <exclusion>
-                    <artifactId>el-api</artifactId>
-                    <groupId>javax.el</groupId>
-                </exclusion>
-                <exclusion>
                     <artifactId>javassist</artifactId>
                     <groupId>jboss</groupId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.el</groupId>
-                    <artifactId>el-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet.jsp</groupId>
-                    <artifactId>jsp-api</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.ibt.intellidocs</groupId>
-            <artifactId>intellidocs-ejb</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>ejb</type>
+            <groupId>commons-digester</groupId>
+            <artifactId>commons-digester</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.ibt.intellidocs</groupId>
-            <artifactId>intellidocs-war</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>war</type>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -112,13 +76,6 @@
                             <groupId>org.jboss.seam</groupId>
                             <artifactId>jboss-seam</artifactId>
                         </ejbModule>
-                        <!--
-                                                <jarModule>
-                                                    <artifactId>org.jboss.seam</artifactId>
-                                                    <groupId>jboss-el</groupId>
-                                                    <bundleDir>lib</bundleDir>
-                                                </jarModule>
-                        -->
                         <jarModule>
                             <artifactId>commons-digester</artifactId>
                             <groupId>commons-digester</groupId>
